# auth

./: .env.example  .gitignore  CHANGELOG.md  Dockerfile  README.md  auth-deployment.yaml  config_kuber.yaml.example  default.conf  docker-compose.yaml  dockerfile  ingress.yaml  k3s-docker-build.sh  letsencrypt.yaml  project_development.sh  pyproject.toml  requirements.txt  requiremets.txt  secret_kuber.yaml.example
app/: .env.example  admin.py  api_doc.yaml  config.py  decorators.py  errors.py  extensions.py  init_oauth.py  main.py  signals.py
app/authorization/: auth.py  namespace.py  schemas.py  services.py
app/authorization/google/: api_routes.py  services.py
app/authorization/oauth/: device_cache.py  services.py
app/authorization/oauth/google/: api_routes.py  services.py
app/authorization/oauth/yandex/: api_routes.py  services.py
app/authorization/yandex/: api_routes.py
app/currencies/: routs.py  schemas.py  services.py
app/database/: database.py  models.py
app/kafka/: consumer.py  kafka.py  producer.py  services.py
app/kafka/handlers/: balance_compensate.py  balance_reserve.py
app/kafka/handlers/guild/: guild_war_compensate.py  guild_war_declare.py
app/kafka/handlers/shop/: balance_compensate.py  balance_reserve.py
app/migration/: env.py
app/migration/versions/: 059e64aa403a_add_currencies_and_transaction_enums_.py  6367e70e4fa0_add_currencies_relationship_renamed_.py  8b5ee0a2b141_add_provider_field_in_device_logins.py  98f7f243c57a_removing_the_hashed_password_length_.py  9a004a8bdffb_change_varchar_of_transaction_id_in_.py  9f80f56263de_double_bond_between_tables.py  a791d9d76c93_change_the_name_of_the_silver_column_in_.py  c1cae8f326dc_initial_revision.py  c42473418980_from_async_to_sync.py  d00c045698b7_columns_name_and_surname_changed_to_.py  eda0238be569_remove_cli_redirect_uri_from_device_.py  f6af5f59ca20_add_device_logins_table.py  fd11c14d3a0e_add_balance_table_and_user_relationship.py
app/users/: namespace.py  schemas.py  services.py  users.py
migration/: env.py
