[project]
name = "auth-service"
version = "1.1.9"
description = "Позволяет произвести регистрацию по логину и паролю, через Yandex или Google. Управлять пользовательскими данными."
authors = [
    {name = "AmalSultanov"}, {name = "Darkvran"}, {name = "Sladkiy-bubalex"}
]
readme = "README.md"
requires-python = ">=3.13,<4"
dependencies = [
    "alembic (>=1.16.2,<2.0.0)",
    "aniso8601 (>=10.0.1,<11.0.0)",
    "annotated-types (>=0.7.0,<0.8.0)",
    "anyio (>=4.9.0,<5.0.0)",
    "attrs (>=25.3.0,<26.0.0)",
    "authlib (>=1.6.0,<2.0.0)",
    "blinker (>=1.9.0,<2.0.0)",
    "certifi (>=2025.6.15,<2026.0.0)",
    "cffi (>=1.17.1,<2.0.0)",
    "charset-normalizer (>=3.4.2,<4.0.0)",
    "click (>=8.2.1,<9.0.0)",
    "colorama (>=0.4.6,<0.5.0)",
    "confluent-kafka (>=2.10.1,<3.0.0)",
    "cryptography (>=45.0.4,<46.0.0)",
    "dnspython (>=2.7.0,<3.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "ecdsa (>=0.19.1,<0.20.0)",
    "email-validator (>=2.2.0,<3.0.0)",
    "flasgger (>=0.9.7.1,<0.10.0.0)",
    "flask (>=3.1.1,<4.0.0)",
    "flask-jwt-extended (>=4.7.1,<5.0.0)",
    "flask-mail (>=0.10.0,<0.11.0)",
    "flask-admin (>=1.6.1,<2.0.0)",
    "greenlet (>=3.2.3,<4.0.0)",
    "h11 (>=0.16.0,<0.17.0)",
    "httpcore (>=1.0.9,<2.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "idna (>=3.10,<4.0)",
    "importlib-resources (>=6.5.2,<7.0.0)",
    "itsdangerous (>=2.2.0,<3.0.0)",
    "jinja2 (>=3.1.6,<4.0.0)",
    "jsonschema (>=4.24.0,<5.0.0)",
    "jsonschema-specifications (>=2025.4.1,<2026.0.0)",
    "mako (>=1.3.10,<2.0.0)",
    "markupsafe (>=3.0.2,<4.0.0)",
    "mccabe (>=0.7.0,<0.8.0)",
    "mistune (>=3.1.3,<4.0.0)",
    "packaging (>=25.0,<26.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "pyasn1 (>=0.6.1,<0.7.0)",
    "pycodestyle (>=2.14.0,<3.0.0)",
    "pycparser (>=2.22,<3.0)",
    "pydantic (>=2.11.7,<3.0.0)",
    "pydantic-core (==2.33.2)",
    "pyflakes (==3.4.0)",
    "pyjwt (==2.10.1)",
    "python-dotenv (==1.1.1)",
    "python-jose (==3.5.0)",
    "pytz (==2025.2)",
    "pyyaml (==6.0.2)",
    "redis (==6.2.0)",
    "referencing (==0.36.2)",
    "requests (==2.32.4)",
    "rpds-py (==0.25.1)",
    "rsa (==4.9.1)",
    "six (==1.17.0)",
    "sniffio (==1.3.1)",
    "sqlalchemy (==2.0.41)",
    "typing-inspection (==0.4.1)",
    "typing-extensions (==4.14.0)",
    "urllib3 (==2.5.0)",
    "werkzeug (==3.1.3)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
